validation and error handling finished
