# controllers/recipesController.js
@@ -1,7 +1,7 @@
 const mongodb = require('../db/connect');
-const ObjectId = require('mongodb').ObjectId;
+// const ObjectId = require('mongodb').ObjectId;
 
-const getAllIDs = async (req, res) => {
+const getAllRecipes = async (req, res) => {
   try {
     const result = await mongodb.getDb().db('recipes_project').collection('recipes').find();
     result.toArray().then((documents) => {
@@ -12,10 +12,16 @@ const getAllIDs = async (req, res) => {
   }
 };
 
-const getSingleID = async (req, res) => {
+const getSingleRecipe = async (req, res) => {
   try {
-    const documentId = new ObjectId(req.params.id);
-    const result = await mongodb.getDb().db('recipes_project').collection('recipes').find({ _id: documentId });
+
+    if (!req.params.recipeName) {
+      res.status(400).json('Must use a valid recipe name to find a recipe.');
+      return;
+    }
+
+    const recipeName = req.params.recipeName;
+    const result = await mongodb.getDb().db('recipes_project').collection('recipes').find({ recipeName: recipeName });
     result.toArray().then((document) => {
       res.json(document[0])
     });
@@ -25,20 +31,26 @@ const getSingleID = async (req, res) => {
 };
 
 // you can only have one get by id, name or tag; not multiple
-const getRecipeByName= async (req, res) => {
-  try {
-    const tags = req.params.tags;
-    const result = await mongodb.getDb().db('recipes_project').collection('recipes').find({ tags: tags });
-    result.toArray().then((data) => {
-      res.json(data[0])
-    });
-  } catch (err) {
-    res.status(500).json(err);
-  }
-};
+// const getRecipeByName= async (req, res) => {
+//   try {
+//     const tags = req.params.tags;
+//     const result = await mongodb.getDb().db('recipes_project').collection('recipes').find({ tags: tags });
+//     result.toArray().then((data) => {
+//       res.json(data[0])
+//     });
+//   } catch (err) {
+//     res.status(500).json(err);
+//   }
+// };
 
 const createNewRecipe = async (req, res) => {
   try {
+
+    if (!req.body.recipeName || !req.body.ingredients || !req.body.instructions || !req.body.prepareTime || !req.body.tags) {
+      res.status(400).send({ message: 'Input can not be empty!' });
+      return;
+    }
+
     const recipe = {
       recipeName: req.body.recipeName,
       ingredients: req.body.ingredients,
@@ -61,7 +73,18 @@ const createNewRecipe = async (req, res) => {
 
 const updateRecipe = async (req, res) => {
   try {
-    const documentId = new ObjectId(req.params.id);
+
+    if (!req.body.recipeName || !req.body.ingredients || !req.body.instructions || !req.body.prepareTime || !req.body.tags) {
+      res.status(400).send({ message: 'Input can not be empty!' });
+      return;
+    }
+    const recipeName = req.params.recipeName;
+
+    // if (!recipeName) {
+    //   res.status(400).send({ message: 'Recipe Name Invalid' });
+    //   return;
+    // }
+
     const updaterecipeDoc = {
       recipeName: req.body.recipeName,
       ingredients: req.body.ingredients,
@@ -77,7 +100,7 @@ const updateRecipe = async (req, res) => {
     //   $set: { favoriteColor: "Green" }
     // };
 
-    const response = await mongodb.getDb().db('recipes_project').collection('recipes').replaceOne({ _id: documentId }, updaterecipeDoc);
+    const response = await mongodb.getDb().db('recipes_project').collection('recipes').replaceOne({ recipeName: recipeName }, updaterecipeDoc);
 
     if (response.modifiedCount > 0) {
       res.status(204).send();
@@ -92,9 +115,15 @@ const updateRecipe = async (req, res) => {
 
 const deleteRecipe = async (req, res) => {
   try {
-    const documentId = new ObjectId(req.params.id);
 
-    const response = await mongodb.getDb().db('recipes_project').collection('recipes').deleteOne({ _id: documentId }, true);
+    const recipeName = req.params.recipeName;
+
+    if (!recipeName) {
+      res.status(400).send({ message: 'Recipe Name Invalid' });
+      return;
+    }
+
+    const response = await mongodb.getDb().db('recipes_project').collection('recipes').deleteOne({ recipeName: recipeName }, true);
 
     if (response.deletedCount > 0) {
       res.status(200).send();
@@ -106,4 +135,4 @@ const deleteRecipe = async (req, res) => {
   }
 };
 
-module.exports = { getAllIDs, getSingleID, createNewRecipe, updateRecipe, deleteRecipe, getRecipeByName };
+module.exports = { getAllRecipes, getSingleRecipe, createNewRecipe, updateRecipe, deleteRecipe };
